# file-identify

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: extensions.rs  interpreters.rs  lib.rs  tags.rs
tests/: cli_tests.rs  compatibility_test.rs  extensions_test.rs  integration_tests.rs  python_compatibility_test.rs
