[package]
name = "file-identify"
version = "0.1.1"
edition = "2024"
authors = ["Serhii Kaliuzhnyi <https://github.com/grok-rs>"]
description = "File identification library for Rust - detects file types based on extensions, shebangs, and content"
documentation = "https://docs.rs/file-identify"
readme = "README.md"
repository = "https://github.com/grok-rs/file-identify"
license = "MIT"
keywords = ["file", "identification", "detection", "filetype", "mime"]
categories = ["filesystem", "command-line-utilities"]
rust-version = "1.85.0"
exclude = ["tests/fixtures/**/*"]

[[bin]]
name = "file-identify"
path = "src/bin/main.rs"


[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
thiserror = "2.0.12"
smallvec = "1.11"
phf = { version = "0.12.1", features = ["macros"] }

[dev-dependencies]
tempfile = "3.8"

